SERVER-12820 Parse connection string to handle replica set connections in copydb command